compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test8.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn x() { 1. <. 2.3 }"
---
----- SOURCE CODE
pub fn x() { 1. <. 2.3 }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([x/0]).

-spec x() -> boolean().
x() ->
    1.0 < 2.3.
