compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__type_named_module_info.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub type ModuleInfo {\n    ModuleInfo\n}\n\npub fn main() {\n    ModuleInfo\n}\n"
---
----- SOURCE CODE

pub type ModuleInfo {
    ModuleInfo
}

pub fn main() {
    ModuleInfo
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).
-export_type([module_info/0]).

-type module_info() :: module_info.

-spec main() -> module_info().
main() ->
    module_info.
