compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__variable_name_underscores_preserved.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn a(name_: String) -> String {\n    let name__ = name_\n    let name = name__\n    let one_1 = 1\n    let one1 = one_1\n    name\n}"
---
----- SOURCE CODE
pub fn a(name_: String) -> String {
    let name__ = name_
    let name = name__
    let one_1 = 1
    let one1 = one_1
    name
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([a/1]).

-spec a(binary()) -> binary().
a(Name_) ->
    Name__ = Name_,
    Name = Name__,
    One_1 = 1,
    One1 = One_1,
    Name.
