compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__windows_file_escaping_bug.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn main() { panic }"
---
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> any().
main() ->
    erlang:error(#{
        gleam_error => panic,
        message => ~"`panic` expression evaluated.",
        file => ~"C:\\root\\project\\test\\my\\mod.gleam",
        module => ~"my/mod",
        function => ~"main",
        line => 1
    }).
